--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>3.1.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+
+
     </dependencies>
 
 
